# anakin-ai-unofficial-api

./: .gitignore  LICENSE  README.md  pyproject.toml  test_anakin_chatbot.py  test_anakin_quickapp.py
.github/: workflow.yml
src/anakin_ai/: __init__.py  client.py
