[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anakin-ai"
version = "0.1.3"
authors = [
  { name="Lynn Mikami", email="your.email@example.com" },
]
description = "A Python client for interacting with the Anakin AI API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://anakin.ai"
"Bug Tracker" = "https://anakin.ai/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/anakin_ai"]

[tool.hatch.build]
exclude = [
    "anakin_test_env",
    "test_*.py",
]
